Fixed spacing/pos of items also updated scss look

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,20 +4,33 @@
 }
 
 
-.containerItem{
-    display: flex;
-    justify-content: space-around;
-}
+
 .resultTotal{
     align-items: center;
     font-size: xx-large;
 }
-button{
-    margin-top: 10px;
-    width: 200px;
-    height: 30px;
+
+/*space between each tabels override*/
+table{
+    margin-top: 5em !important;
+    background-color: #F5F5F5;
+    border-radius: 0.5em;
+     /* cellspacing */
+     border-collapse: collapse!important;
+     border-spacing: 0!important;
+    
+}
+table:hover{
+    border-radius: 0.5em;
 }
 
+th td{
+    padding: 0!important;
+}
+
+body{
+    margin-bottom: 10em!important;
+}
 
 
 input::-webkit-outer-spin-button,
@@ -26,9 +39,40 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.tableOne >table{
-    width: 300px;
+table> caption{
+    font-size: x-large;
+    margin-bottom: .5em;
 }
+
+/*Custom scrollbar*/
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 11px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #373D3F;
+}
+
+.img_header{
+display: block;
+margin-top: 2em;
+margin-left: auto;
+margin-right: auto;
+}
+
+
+
 
 
 
